removed some contnet

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <project name="My Project" default="help" basedir=".">
-  <!-- Define the properties used by the build job -->
+  <!-- Define  build job -->
   <property file="properties/${env.NAME}/build.properties" />
   <property name="app.name"      value="hello"/>
   <property name="tcserver.home" value="${tomcat.base}" />
